# FaceVideoChange

./: pyproject.toml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-项目基础设施/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-模型验证与优化/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md
.planning/research/: FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: presets.yaml
raw/: face_swap_model_evaluation.md  optimization_roadmap.md
src/facevidechange/: __init__.py  __main__.py  cli.py  config.py  logging_.py
src/facevidechange/io/: __init__.py
src/facevidechange/models/: __init__.py
