[project]
name = "facevidechange"
version = "0.1.0"
description = "Real-time video stream face swapping CLI tool"
requires-python = ">=3.10"
dependencies = [
    "typer[cli]>=0.12.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0",
    "opencv-python>=4.10.0",
    "onnxruntime-gpu>=1.18.0",
    "insightface>=0.7.0",
]

[project.scripts]
facevidechange = "facevidechange.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/facevidechange"]
